# android-ndk

bitmap-plasma/: gradle.properties
bitmap-plasma/app/: build.gradle
bitmap-plasma/app/src/main/: AndroidManifest.xml
bitmap-plasma/app/src/main/cpp/: CMakeLists.txt  jniImageutils.c  plasma.c
bitmap-plasma/app/src/main/java/com/example/plasma/: Plasma.java
bitmap-plasma/app/src/main/java/com/linecorp/android/common/jpegturbo/: JpegTurbo.java
bitmap-plasma/app/src/main/java/com/linecorp/kuru/utils/: NativeImageUtils.java
